Title still off-centre on the "add-block" page—Fixes #1351 🎉

--- a/views/add/index.less
+++ b/views/add/index.less
@@ -9,6 +9,10 @@
     height: 100%;
     background-color: @highlight;
 
+    #navigationBar h1 {
+        width: 73%;
+    }
+
     .list-wrapper {
         display: flex;
         flex-direction: column;
